// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetReplyAndGetArticle GetArticle authenticated fields returns null for non-logged users 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "requestedForReply": null,
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle feedbacks should work: feedback loading test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleReplies": Array [
        Object {
          "createdAt": "2015-01-01T12:10:30Z",
          "feedbackCount": 1,
          "feedbacks": Array [
            Object {
              "id": "foo__bar__test-user__test-app",
              "vote": "UPVOTE",
            },
          ],
          "negativeFeedbackCount": 0,
          "positiveFeedbackCount": 1,
        },
      ],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle fetches more than 10 reply requests 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "replyRequestCount": 11,
      "replyRequests": Array [
        Object {
          "reason": "Reason 0",
        },
        Object {
          "reason": "Reason 1",
        },
        Object {
          "reason": "Reason 2",
        },
        Object {
          "reason": "Reason 3",
        },
        Object {
          "reason": "Reason 4",
        },
        Object {
          "reason": "Reason 5",
        },
        Object {
          "reason": "Reason 6",
        },
        Object {
          "reason": "Reason 7",
        },
        Object {
          "reason": "Reason 8",
        },
        Object {
          "reason": "Reason 9",
        },
        Object {
          "reason": "Reason 10",
        },
      ],
      "text": "Popular",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle get specified article and articleCategories with DELETED status 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleCategories": Array [
        Object {
          "category": Object {
            "description": "詐騙貼圖、假行銷手法。",
            "id": "c2",
            "title": "免費訊息詐騙",
          },
          "categoryId": "c2",
        },
      ],
      "text": "Lorum ipsum",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle get specified article and articleCategories with NORMAL status 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleCategories": Array [
        Object {
          "category": Object {
            "description": "對同性婚姻的恐懼、愛滋病的誤解與的防疫相關釋疑。",
            "id": "c1",
            "title": "性少數與愛滋病",
          },
          "categoryId": "c1",
          "id": "foo__c1",
        },
      ],
      "categoryCount": 1,
      "text": "Lorum ipsum",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle realtedArticles should work for media articles 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WzcuNSwic2ltaWxhck1lZGlhQXJ0aWNsZSJd",
            "node": Object {
              "id": "similarMediaArticle",
            },
            "score": 7.5,
          },
          Object {
            "cursor": "WzAuNTQ2MTgxODYsImZvbzMiXQ==",
            "node": Object {
              "id": "foo3",
            },
            "score": 0.54618186,
          },
          Object {
            "cursor": "WzAuNTMwMzI5NiwiZm9vMiJd",
            "node": Object {
              "id": "foo2",
            },
            "score": 0.5303296,
          },
          Object {
            "cursor": "WzAuNDg3ODUxNywiZm9vIl0=",
            "node": Object {
              "id": "foo",
            },
            "score": 0.4878517,
          },
        ],
      },
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle relatedArticles should work for text articles: relatedArticle filter test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WzAuOTg2NDk1MywiZm9vMyJd",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.9864953,
          },
          Object {
            "cursor": "WzAuNTMwMzI5NiwiZm9vMiJd",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.5303296,
          },
        ],
      },
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle relatedArticles should work for text articles: relatedArticle no-param test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WzAuOTg2NDk1MywiZm9vMyJd",
            "highlight": Object {
              "hyperlinks": Array [
                Object {
                  "summary": "<HIGHLIGHT>summary</HIGHLIGHT>",
                  "title": "<HIGHLIGHT>title</HIGHLIGHT> <HIGHLIGHT>title</HIGHLIGHT>",
                },
              ],
              "reference": null,
              "text": "<HIGHLIGHT>Lorum</HIGHLIGHT> <HIGHLIGHT>ipsum</HIGHLIGHT> <HIGHLIGHT>Lorum</HIGHLIGHT> <HIGHLIGHT>ipsum</HIGHLIGHT> <HIGHLIGHT>Lorum</HIGHLIGHT> <HIGHLIGHT>ipsum</HIGHLIGHT>",
            },
            "node": Object {
              "id": "foo3",
            },
            "score": 0.9864953,
          },
          Object {
            "cursor": "WzAuNTMwMzI5NiwiZm9vMiJd",
            "highlight": Object {
              "hyperlinks": Array [],
              "reference": null,
              "text": "<HIGHLIGHT>Lorum</HIGHLIGHT> <HIGHLIGHT>ipsum</HIGHLIGHT> <HIGHLIGHT>Lorum</HIGHLIGHT> <HIGHLIGHT>ipsum</HIGHLIGHT>",
            },
            "node": Object {
              "id": "foo2",
            },
            "score": 0.5303296,
          },
          Object {
            "cursor": "WzAuNDg3ODUxNywibWVkaWFBcnRpY2xlIl0=",
            "highlight": Object {
              "hyperlinks": Array [],
              "reference": null,
              "text": "<HIGHLIGHT>Lorum</HIGHLIGHT> <HIGHLIGHT>ipsum</HIGHLIGHT>",
            },
            "node": Object {
              "id": "mediaArticle",
            },
            "score": 0.4878517,
          },
        ],
      },
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle relatedArticles should work for text articles: relatedArticle sorting test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WzAuNDg3ODUxNywibWVkaWFBcnRpY2xlIl0=",
            "node": Object {
              "id": "mediaArticle",
              "text": "Lorum ipsum",
            },
            "score": 0.4878517,
          },
          Object {
            "cursor": "WzAuNTMwMzI5NiwiZm9vMiJd",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.5303296,
          },
          Object {
            "cursor": "WzAuOTg2NDk1MywiZm9vMyJd",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.9864953,
          },
        ],
      },
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle should allow filtering article replies 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleReplies": Array [
        Object {
          "reply": Object {
            "id": "fofo",
          },
          "replyId": "fofo",
          "status": "NORMAL",
        },
      ],
      "deletedReplies": Array [
        Object {
          "reply": Object {
            "id": "bar2",
          },
          "replyId": "bar2",
          "status": "DELETED",
        },
      ],
      "normalReplies": Array [
        Object {
          "reply": Object {
            "id": "fofo",
          },
          "replyId": "fofo",
          "status": "NORMAL",
        },
      ],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle should get the specified article & associated replies from ID 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleReplies": Array [
        Object {
          "article": Object {
            "id": "foo",
          },
          "articleId": "foo",
          "canUpdateStatus": false,
          "createdAt": "2015-01-01T12:10:30Z",
          "reply": Object {
            "id": "bar",
            "reference": "barbar",
            "text": "bar",
            "type": "NOT_ARTICLE",
          },
          "replyId": "bar",
          "status": "NORMAL",
          "updatedAt": "2015-01-02T12:10:30Z",
        },
      ],
      "attachmentHash": null,
      "attachmentUrl": null,
      "references": Array [
        Object {
          "type": "LINE",
        },
      ],
      "replyCount": 1,
      "replyRequestCount": 2,
      "replyRequests": Array [
        Object {
          "article": Object {
            "id": "foo",
          },
          "feedbackCount": 2,
          "negativeFeedbackCount": 1,
          "positiveFeedbackCount": 1,
          "reason": "Reason foo",
        },
        Object {
          "article": Object {
            "id": "foo",
          },
          "feedbackCount": 0,
          "negativeFeedbackCount": 0,
          "positiveFeedbackCount": 0,
          "reason": null,
        },
      ],
      "requestedForReply": true,
      "text": "Lorum ipsum",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle should return empty articleReply when there is none 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "articleReplies": Array [],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetReply should allow filtering article replies 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "articleReplies": Array [
        Object {
          "article": Object {
            "id": "foo2",
          },
          "articleId": "foo2",
          "status": "NORMAL",
        },
      ],
      "deletedReplies": Array [
        Object {
          "article": Object {
            "id": "foo",
          },
          "articleId": "foo",
          "status": "DELETED",
        },
        Object {
          "article": Object {
            "id": "foo3",
          },
          "articleId": "foo3",
          "status": "DELETED",
        },
      ],
      "normalReplies": Array [
        Object {
          "article": Object {
            "id": "foo2",
          },
          "articleId": "foo2",
          "status": "NORMAL",
        },
      ],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetReply should get the specified reply & associated articles from ID 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "articleReplies": Array [
        Object {
          "article": Object {
            "text": "Lorum ipsum",
          },
          "articleId": "foo",
          "canUpdateStatus": false,
        },
      ],
      "reference": "barbar",
      "text": "bar",
      "type": "NOT_ARTICLE",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetReply similarReplies should work: similarReply no-param test 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "similarReplies": Object {
        "edges": Array [
          Object {
            "cursor": "WzEuODg5MTY5Mywic2ltaWxhci10by1iYXIiXQ==",
            "highlight": Object {
              "hyperlinks": Array [],
              "reference": "<HIGHLIGHT>barbar</HIGHLIGHT>",
              "text": "<HIGHLIGHT>bar</HIGHLIGHT> <HIGHLIGHT>bar</HIGHLIGHT>",
            },
            "node": Object {
              "id": "similar-to-bar",
            },
            "score": 1.8891693,
          },
          Object {
            "cursor": "WzAuNTY2MzE3Miwic2ltaWxhci10by1iYXIyIl0=",
            "highlight": Object {
              "hyperlinks": Array [
                Object {
                  "summary": "<HIGHLIGHT>Lorem</HIGHLIGHT> <HIGHLIGHT>Ipsum</HIGHLIGHT> <HIGHLIGHT>Ipsum</HIGHLIGHT>",
                  "title": "<HIGHLIGHT>GG</HIGHLIGHT> G",
                },
              ],
              "reference": null,
              "text": null,
            },
            "node": Object {
              "id": "similar-to-bar2",
            },
            "score": 0.5663172,
          },
        ],
      },
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetReply similarReplies should work: similarReply sorting test 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "similarReplies": Object {
        "edges": Array [
          Object {
            "cursor": "WzAuNTY2MzE3Miwic2ltaWxhci10by1iYXIyIl0=",
            "highlight": Object {
              "hyperlinks": Array [
                Object {
                  "summary": "<HIGHLIGHT>Lorem</HIGHLIGHT> <HIGHLIGHT>Ipsum</HIGHLIGHT> <HIGHLIGHT>Ipsum</HIGHLIGHT>",
                  "title": "<HIGHLIGHT>GG</HIGHLIGHT> G",
                },
              ],
              "reference": null,
              "text": null,
            },
            "node": Object {
              "id": "similar-to-bar2",
            },
            "score": 0.5663172,
          },
          Object {
            "cursor": "WzEuODg5MTY5Mywic2ltaWxhci10by1iYXIiXQ==",
            "highlight": Object {
              "hyperlinks": Array [],
              "reference": "<HIGHLIGHT>barbar</HIGHLIGHT>",
              "text": "<HIGHLIGHT>bar</HIGHLIGHT> <HIGHLIGHT>bar</HIGHLIGHT>",
            },
            "node": Object {
              "id": "similar-to-bar",
            },
            "score": 1.8891693,
          },
        ],
      },
    },
  },
}
`;
